<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentColla"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanc"
    android:orientation="vertical"
    tools:context="com.ruben.castepinyes.FragmentColla">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/colla"
        android:textAlignment="center"
        android:textSize="40sp" />


    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:hint="@string/nombre" />

    <EditText
        android:id="@+id/etApellido1"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:hint="@string/_1er_apellido" />

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:hint="@string/telefono" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:background="@drawable/boton_redondo"
        />
    <Button
        android:id="@+id/btnEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_editar"
        android:background="@drawable/boton_redondo"
        android:layout_marginTop="@dimen/fab_margin"
        />
    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_eliminar"
        android:background="@drawable/boton_redondo"
        android:layout_marginTop="@dimen/fab_margin"
        />

    <Button
        android:id="@+id/btnConsultar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mostrar_tota_la_gent_de_la_colla"
        android:background="@drawable/boton_redondo"
        android:layout_marginTop="@dimen/fab_margin"
        android:textColor="#000000"/>

</LinearLayout>
