<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ruben.castepinyes.EditarPersona"
    android:orientation="vertical"
    android:background="@color/blanc">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/colla"
        android:textAlignment="center"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/editNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:hint="@string/nombre" />

    <EditText
        android:id="@+id/editApellido1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:hint="@string/_1er_apellido" />

    <EditText
        android:id="@+id/editTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:hint="@string/telefono" />

    <Button
        android:id="@+id/editEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_editar"
        android:background="@drawable/boton_redondo"
        android:layout_marginTop="@dimen/fab_margin"
        />

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        />

</LinearLayout>
