<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Musica Castells" />
        <item
            android:id="@+id/nav_colla"
            android:icon="@drawable/ic_menu_colla"
            android:title="@string/Colla" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_create"
            android:title="@string/Pinyes" />
        <item
            android:id="@+id/nav_visor"
            android:icon="@drawable/ic_remove_red_eye"
            android:title="@string/visualizar_pinyes_sing"
        />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Contact" />
        </menu>
    </item>

</menu>
