<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/sing_page"
    android:background="@color/blanc">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
            app:toolbarId="@+id/toolbar">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="@dimen/app_name"
                />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:id="@+id/fragment_sing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.ruben.castepinyes.Sing">

            <!-- TODO: Update blank fragment layout -->


            <Button
                android:id="@+id/buttonEntrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textPass"
                android:layout_marginTop="40dp"
                android:text="@string/entrar"
                android:background="@drawable/boton_redondo"/>

            <EditText
                android:id="@+id/textUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/icono_castepinyes"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/nombre"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/textPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textUser"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <TextClock
                android:id="@+id/textClock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="27dp"
                android:gravity="center"
                android:textSize="35sp" />
            <ImageView
                android:id="@+id/icono_castepinyes"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_below="@id/textClock"
                android:layout_centerHorizontal="true"
                android:src="@drawable/iconocastepinyes"/>

            <Button
                android:id="@+id/Sing_button_resset"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@id/buttonEntrar"
                android:layout_centerHorizontal="true"
                android:background="#00ffffff"
                android:text="@string/Sing_Button_ressetpassword" />

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
